<resources>
    <string name="app_name">Smoothie Recipes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipe_page">RecipePageActivity</string>
    <string name="intro_text">List of Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="et_recipe">Smoothie Name</string>
    <string name="tv_recipe">Smoothie Name:</string>
    <string name="tv_description">Smoothie Description:</string>
    <string name="et_description">Smoothie Description</string>
    <string name="tv_ingredients">Smoothie Ingredients:</string>
    <string name="et_ingredients">Smoothie Ingredients - separate ingredients with commas (Ex. 1 cup Mangoes, 2 cups spinach...)</string>
    <string name="new_recipe">New Recipe</string>
    <string name="submit">Submit</string>
</resources>

