<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:orientation="vertical"
    tools:context="com.example.android.assignment10.RecipeDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_recipe"/>
        <EditText
            android:id="@+id/et_recipe_smoothieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_recipe"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_description"/>
        <EditText
            android:id="@+id/et_recipe_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_description"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ingredients"/>
    <EditText
        android:id="@+id/et_recipe_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_ingredients"/>
    </LinearLayout>


    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:ems="10"
        android:text="@string/submit"
         />
</LinearLayout>
